Refactor PaymentResource: replace error key string with a constant and simplify stream collection